--- a/guiProjekt/css/style.css
+++ b/guiProjekt/css/style.css
@@ -431,6 +431,7 @@ ul{
     box-shadow:  var(--shadow-black-100);
     margin : 15px;
     padding: 30px;
+    height: 400px;
     border-radius: 10px;
     text-align: center;
     position: relative;
