--- a/guiProjekt/css/style.css
+++ b/guiProjekt/css/style.css
@@ -871,7 +871,8 @@ ul{
 .footer-col ul li:not(:last-child){
     margin-bottom: 10px;
 }
-.footer-col ul li a {
+.footer-col ul li a,
+.footer-col ul li {
     font-size: 16px;
     color: rgba(255,255,255,0.9);
     font-weight: 300;
@@ -880,8 +881,12 @@ ul{
     transition: all 0.5s ease;
     text-decoration: none;
 }
-.footer-col ul li a:hover{
+.footer-col ul li a:hover {
     padding-left: 5px ;
+}
+.footer-col ul li:hover {
+    padding-left: 5px ;
+    cursor: default;
 }
 
 .footer .copyright-text{
