--- a/guiProjekt/css/style.css
+++ b/guiProjekt/css/style.css
@@ -618,6 +618,7 @@ ul{
     text-align: center;
     border-radius: 10px;
     box-shadow: var(--shadow-black-100);
+    height: 100%;
 }
 .app-download-item i{
     font-size: 30px;
@@ -1022,7 +1023,7 @@ ul{
         
     }
     .how-it-works-item,
-    .app-download-item{
+    .app-download-item {
         margin-bottom: 30px;
     }
     .how-it-works-item.line-right::before{
